# nrf24radio

./: .gitignore  Cargo.toml  README.md
examples/.cargo/: config.toml
examples/rp/: Cargo.toml  build.rs
examples/rp/.cargo/: config.toml
examples/stm32f4/: Cargo.toml
examples/stm32f4/.cargo/: config.toml
src/: config.rs  control.rs  error.rs  lib.rs  state.rs
src/common/: command.rs  config.rs  mod.rs  register.rs  state.rs
src/pipe/: mod.rs  rx.rs  tx.rs  watcher.rs
