[package]
name = "nrf24radio"
version = "0.1.1"
edition = "2021"
authors = ["<agrc14@gmail.com>"]

description = "Asynchronous embedded driver for NRF24L01(+) devices"

readme = "README.md"

repository = "https://github.com/micro-rust/nrf24radio"

license = "MPL-2.0"

keywords = ["embedded", "radio", "async", "nrf24", "no-std"]
categories = ["asynchronous", "embedded", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.embedded-hal]
version = "^1.0.0-rc.1"

[dependencies.embedded-hal-async]
version = "^1.0.0-rc.1"

[dependencies.defmt]
optional = true
version = "0.3"

[dependencies.embassy-sync]
optional = true
version = "0.5"
git = "https://github.com/embassy-rs/embassy"

[dependencies.embassy-futures]
optional = true
version = "0.1"
git = "https://github.com/embassy-rs/embassy"



[features]

default = ["log", "control-loop"]

# Enables logging
log = ["dep:defmt"]

control-loop = ["dep:embassy-sync", "dep:embassy-futures"]
