[package]
edition = "2021"
name = "nrf24radio-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"



[dependencies]

# Cortex-M
cortex-m = "0.7"
cortex-m-rt = "0.7"


# NRF24 package dependency
nrf24radio = { path = "../../../nrf24radio" }


# Logging dependencies
defmt = "0.3"
defmt-rtt = "0.4"


# Panic implementation
[dependencies.panic-probe]
version = "0.3"
features = ["print-defmt"]


# HAL 
[dependencies.embedded-hal-async]
version = "^1.0.0-rc.1"


# Embassy dependencies
[dependencies.embassy-executor]
version = "0.3"
features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]
git = "https://github.com/embassy-rs/embassy"

[dependencies.embassy-rp]
version = "0.1.0"
features = [
    "defmt", "unstable-traits", "unstable-pac", "nightly",
    "time-driver", "critical-section-impl",
]
git = "https://github.com/embassy-rs/embassy"

[dependencies.embassy-sync]
version = "0.3.0"
git = "https://github.com/embassy-rs/embassy"

[dependencies.embassy-time]
version = "0.1.2"
features = ["defmt", "defmt-timestamp-uptime"]
git = "https://github.com/embassy-rs/embassy"

[dependencies.embassy-embedded-hal]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy"



[profile.release]
debug = 2