[package]
edition = "2021"
name = "nrf24radio-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]


# NRF24 package dependency
nrf24radio = { path = "../../../nrf24radio", features = ["log"] }


# Logging dependencies
defmt = "0.3"
defmt-rtt = "0.4"

# Cortex-M
cortex-m-rt = "0.7"

[dependencies.cortex-m]
version = "0.7"
features = [
    "critical-section-single-core", "inline-asm",
]


# Panic implementation
[dependencies.panic-probe]
version = "0.3"
features = ["print-defmt"]


# HAL 
[dependencies.embedded-hal-async]
version = "^1.0.0-rc.1"


# Embassy dependencies
[dependencies.embassy-executor]
version = "0.3"
features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]
git = "https://github.com/embassy-rs/embassy"

[dependencies.embassy-stm32]
version = "0.1.0"
features = [
    "nightly", "unstable-traits", "defmt", "stm32f411ve",
    "unstable-pac", "memory-x", "time-driver-any", "exti",
    "chrono"
]
git = "https://github.com/embassy-rs/embassy"

[dependencies.embassy-sync]
version = "0.3.0"
git = "https://github.com/embassy-rs/embassy"

[dependencies.embassy-time]
version = "0.1.2"
features = ["defmt", "defmt-timestamp-uptime"]
git = "https://github.com/embassy-rs/embassy"

[dependencies.embassy-embedded-hal]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy"



[profile.release]
debug = 2